# llvm-project

./: .clangd  .gitignore  CMakePresets.json
_demos/: t16.runtimes.sh  t3.build.sh  t4.sparse-checkout.riscv.sh  t4.sparse-checkout.sh  t5.update.commit.sh  t5.update.commit.tt.sh
_demos/t16.cmake_presets/: llvm_CMakePresets.json  runtimes_CMakePresets.json
demos/: compile_commands.json
libc/config/darwin/: api.td
llvm/: CMakeLists.txt  CMakePresets.json  CMakePresets.toolchain.json
mlir/examples/minimal-opt/: CMakeLists.txt  mlir-cat.cpp  mlir-minimal-opt.cpp
mlir/include/mlir/: InitAllDialects.h
mlir/lib/Dialect/Linalg/IR/: LinalgOps.cpp
mlir/lib/Dialect/Vector/Transforms/: VectorEmulateNarrowType.cpp  VectorTransforms.cpp
mlir/test/Dialect/Linalg/: vectorize-tensor-extract.mlir
mlir/unittests/ExecutionEngine/: Invoke.cpp
runtimes/: CMakePresets.json
